# QTcreator

./: README.md
aula_QT_02/: CMakeLists.txt  aula_QT_02_pt_BR.ts  mainwindow.cpp  mainwindow.ui
aula_QT_03/: CMakeLists.txt  aula_QT_03_pt_BR.ts  mainwindow.cpp  mainwindow.ui
aula_QT_04/: CMakeLists.txt  aula_QT_04_pt_BR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
aula_QT_05/: CMakeLists.txt  aula_QT_05_pt_BR.ts  mainwindow.cpp  mainwindow.ui
aula_QT_06/: CMakeLists.txt  aula_QT_06_pt_BR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
aula_QT_07/: CMakeLists.txt  aula_QT_07_pt_BR.ts
aula_QT_08/: CMakeLists.txt  aula_QT_08_pt_BR.ts  janela2.cpp  janela2.h  janela2.ui  janela3.cpp  janela3.h  janela3.ui  janela4.cpp  janela4.h  janela4.ui  mainwindow.cpp  mainwindow.ui
aula_QT_09/: aula_QT_09.pro  aula_QT_09_pt_BR.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
